# BootBeats

./: .gitignore  README.md  main.py  pyproject.toml
app/: api.py  app.py  auth.py  database.py  forms.py  instruments.py  models.py  router.py
app/routes/: instrument_loops.py  instruments.py  notes.py  songs.py
app/static/assets/samples/: drum_c5.wav:Zone.Identifier  flute_c5.wav:Zone.Identifier  guitar_c5.wav:Zone.Identifier  hihat_c5.wav:Zone.Identifier  reverse_base_c5.wav:Zone.Identifier  sine_c5.wav:Zone.Identifier  snare_c5.wav:Zone.Identifier  violin_c5.wav:Zone.Identifier
app/static/js/: instrument.js  playNotes.js  song.js
app/templates/: index.html
app/templates/auth/: login.html  register.html
